# CPPotify

./: .gitignore  CMakeLists.txt  Makefile  README.md  album_df.csv  artist_df.csv  audio_features_test.csv  playlist_df.csv  requirements.txt  track_df.csv
source/app/: app.cpp
source/module/: CPPotify.cpp  CPPotify.h  authControl.cpp  authControl.h
source/py/: CPPotify.py  CPPotify_exceptions.py  auth.py  setup.py
source/py/.ipynb_checkpoints/: CPPotify-checkpoint.py  Untitled-checkpoint.ipynb
source/py/CPPotify.egg-info/: PKG-INFO  SOURCES.txt
tests/test_GET/: get_endpoints.py
